--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -28,3 +28,12 @@ footer {
    height: 100vh;
    width: 100vw;
 }
+
+.preloader{
+   width: 100vw;
+   height: 100vh;
+   background-color: white;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+ }
