--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -2,7 +2,7 @@ Nav {
    position: fixed;
    top: 30%;
    right: 0;
-   z-index: 5;
+   z-index: 1;
 }
 
 footer {
@@ -17,14 +17,35 @@ footer {
    justify-content: center;
    background-color: black;
    color: white;
-   z-index: -1;
+   z-index: -3;
+}
+
+.footer-wrapper{
+   display: table;
+}
+
+.footer-content{
+   display: table-row;
+   text-align: center;
+}
+
+.footer-icons{
+   color: rgb(500, 500, 500, 0.5);
+   height: 32px;
+   width: 32px;
+   margin: 8px;
+   margin-bottom: 32px;
+   margin-top: 32px;
+}
+
+.footer-icons:hover{
+   color: white;
 }
 
 .main{
    background-color: white;
    position: relative;
    z-index: 0;
-   margin-bottom: 200px;
    height: 100vh;
    width: 100vw;
 }
