--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -8,6 +8,7 @@ body {
   font-family: ubuntu;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin-bottom: 200px;
 }
 
 * {    
