--- a/src/assets/css/pages.css
+++ b/src/assets/css/pages.css
@@ -51,8 +51,8 @@ p{
    box-shadow: -2px 2px 10px rgba(0, 0, 0, 0.1);
    border-radius: 10px;
    display: inline-flex;
-   width: 100px;
-   height: 100px;
+   width: calc(6vw + 18px);
+   height: calc(6vw + 18px);
    margin: 12px;
    align-items: center;
    justify-content: center;
@@ -121,8 +121,8 @@ p{
    }
 
    .skills-content{
-      width: 64px;
-      height: 64px;
+      width: calc(10vw + 18px);
+      height: calc(10vw + 18px);
       margin: 10px;
    }
 
