--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,5 +1,5 @@
 Nav {
-   position: fixed;
+   position: absolute;
    top: 30%;
    right: 0;
    z-index: 1;
@@ -33,8 +33,8 @@ footer {
 
 .footer-icons{
    color: rgb(500, 500, 500, 0.5);
-   height: 32px;
-   width: 32px;
+   height: 36px;
+   width: 36px;
    margin: 8px;
    margin-bottom: 32px;
    margin-top: 32px;
