--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -3,6 +3,10 @@
   src: url(../fonts/Ubuntu-Regular.ttf);
 }
 
+#root{
+  overflow-x: hidden !important;
+}
+
 body {
   font-family: ubuntu;
   -webkit-font-smoothing: antialiased;
@@ -11,7 +15,7 @@ body {
   -webkit-overflow-scrolling: auto !important;
   -webkit-background-size: auto;
   background-size: auto;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 * {    
