--- a/src/assets/css/pages.css
+++ b/src/assets/css/pages.css
@@ -20,6 +20,8 @@ h2 {
 }
 
 .container {
+   position: relative;
+   overflow-x: hidden !important;
    display: flex;
    height: 100vh;
    align-items: center;
