--- a/src/assets/css/pages.css
+++ b/src/assets/css/pages.css
@@ -165,19 +165,20 @@ input, textarea { font-family:inherit; }
    border: rgba(211, 211, 211, 0.5) solid 0.5px;
    box-shadow: -2px 2px 10px rgba(0, 0, 0, 0.15);
    border-radius: 10px;
-   width: 240px;
    height: 24px;
    margin-bottom: 8px;
    padding: 8px;
+   font-size: medium;
 }
 
 #contact textarea{
    border: rgba(211, 211, 211, 0.5) solid 0.5px;
    box-shadow: -2px 2px 10px rgba(0, 0, 0, 0.15);
    border-radius: 10px;
-   width: 512px;
+   width: 40vw;
    margin-bottom: 16px;
    padding: 8px;
+   font-size: medium;
    resize: none;
 }
 
@@ -189,7 +190,7 @@ input, textarea { font-family:inherit; }
    height: 40px;
    margin-top: 32px;
    vertical-align: middle;
-   width: 530px;
+   width: calc(40vw + 18px);
    text-align: center;
    font-size: large;
 }
@@ -205,13 +206,20 @@ input, textarea { font-family:inherit; }
 }
 
 .profile{
+   width: calc(40vw + 18px);
+   flex: 1;
    display: flex;
    flex-direction: row;
 }
 
 .half{
-   flex: 50%;
-   margin-right: 16px;
+   display: flex;
+   flex: 0.5;
+   width: 45%;
+}
+
+.first{
+   margin-right: 24px;
 }
 
 /*Responsive design for mobile website*/
@@ -291,11 +299,11 @@ input, textarea { font-family:inherit; }
    }
 
    #contact input, #contact textarea{
-      width: 70vw;
+      width: 60vw;
    }
 
    #contact .submit{
-      width: calc(70vw + 18px)
+      width: calc(60vw + 18px)
    }
 
    .profile{
