Hotfix viewport resizing #1

--- a/src/assets/css/pages.css
+++ b/src/assets/css/pages.css
@@ -339,4 +339,12 @@ input, textarea { font-family:inherit; }
    .profile{
       flex-direction: column;
    }
+
+   .notif{
+      bottom: 16px;
+   }
+
+   .notif h2{
+      font-size: medium;
+   }
 }
